# rmt-compose-poc

./: .gitignore  KNOWN-ISSUES.md  LICENSE.md  MIGRATION.md  README.md  README_ES6.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  convert-to-dsl.mjs  index.html  menu-bar.js  modals.js  module-icons.js  module.js  moduleSetup.json  note.js  package-lock.json  package.json  player - Copy-mobile broken.js  player - Copy-working-old.js  player.js  stack-click.js  styles.css  vercel.json  vite.config.js
.claude/: settings.local.json
.tmp-probe/: probe.mjs  probe2.mjs  probe3.mjs  probe4.mjs  probe5.mjs  probe6.mjs  probe7.mjs
docs/: REVIEW-PLAN.md  index.md  package-lock.json  package.json  property-colored-dependency-visualization.md  vercel.json
docs/.vitepress/: config.ts
docs/developer/: index.md  performance.md  theming.md
docs/getting-started/: concepts.md  first-composition.md  index.md  (+1 more)
instruments/: instrument-manager.js  sample-instruments.js  synth-instruments.js
public/: license.html  moduleSetup.json  robots.txt  sitemap.xml  styles.css
rust/: Cargo.toml  LICENSE.md
rust/src/: bytecode.rs  compiler.rs  evaluator.rs  fraction.rs  graph.rs  lib.rs  value.rs
scripts/: build-samples.mjs  gen-chords-progressions.mjs  gen-interval-catalog.mjs  gen-melodies.mjs  sync-wasm.mjs  test-exactness.mjs  validate-modules.mjs
src/: binary-evaluator.js  binary-module-format.js  binary-note.js  binary-utils.js  dependency-graph.js  expression-compiler.js  main.js  menu-bar.js  modals.js  module-serializer.js  module.js  note.js  player.js  stack-click.js
(+331 files in other folders)
